[gd_scene load_steps=3 format=3 uid="uid://bev7sd4nni2if"]

[ext_resource type="Script" path="res://ui/pause.gd" id="1_vh85b"]
[ext_resource type="Theme" uid="uid://1bk43dvjwq68" path="res://ui/theme.tres" id="2_ajf1c"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource( "1_vh85b" )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "2_ajf1c" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
offset_right = 396.0
offset_bottom = 707.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
offset_left = 30.0
offset_top = 30.0
offset_right = 366.0
offset_bottom = 677.0
theme_override_constants/separation = 15

[node name="ButtonContinue" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 336.0
offset_bottom = 97.0
text = "Continue"

[node name="ButtonReset" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 112.0
offset_right = 336.0
offset_bottom = 209.0
text = "Reset Level"

[node name="ButtonMainMenu" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 224.0
offset_right = 336.0
offset_bottom = 321.0
text = "Main Menu"

[node name="ButtonQuit" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 336.0
offset_right = 336.0
offset_bottom = 433.0
text = "Quit"

[node name="LabelCoins" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 448.0
offset_right = 336.0
offset_bottom = 540.0
text = "Coins:"

[node name="LabelTime" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 555.0
offset_right = 336.0
offset_bottom = 647.0
text = "Time:"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
